# abencat-browser

./: .gitignore  AGENT_AUTOMATION.md  CONTRIBUTING.md  FEATURES.md  IMPORT_BROWSER_CONFIG.md  LICENSE  LINUX_HEADLESS.md  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.ru.md  README.zh-CN.md  tutorial-ai-automation.md  tutorial-ai-automation.zh-CN.md
mcp/: cloak-mcp.mjs  package.json
scripts/: download-browser.ps1  download-browser.sh
src/: App.tsx  constants.ts  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  browser.rs  commands.rs  crypto.rs  fingerprint.rs  inject.rs  launch.rs  lib.rs  main.rs  models.rs  profile.rs  proxy.rs  store.rs  util.rs
src-tauri/windows/: nsis-hooks.nsh
src/components/: LockScreen.tsx  SecurityModal.tsx  ui.tsx
website/: index.html
