[package]
name = "cloak-fingerprint-controller"
version = "0.1.0"
description = "Rust/Tauri controller for Cloak fingerprint browser profiles"
authors = ["CloakHQ"]
edition = "2021"
# Two binaries exist (GUI app + cloak-headless); name the GUI one as default
# so `tauri build` / `cargo run` pick it.
default-run = "cloak-fingerprint-controller"

[lib]
name = "cloak_fingerprint_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless server binary — automation API only, no Tauri/webkit GUI.
# Build with: cargo build --release --bin cloak-headless --no-default-features
[[bin]]
name = "cloak-headless"
path = "src/bin/headless.rs"

[features]
default = ["gui"]
# The desktop GUI (Tauri + webkit). Disable for the headless server build.
gui = [
    "dep:tauri",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-opener",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

tauri = { version = "2", features = [], optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
